# activegraph

./: .gitignore  .venv  ALL_STAR_TEAM_UPGRADE.md  CHANGELOG.md  CLAUDE.md  CONTRACT-review-findings.md  CONTRACT.md  CONTRIBUTING.md  DARK_FACTORY_GAUNTLET.md  DARK_FACTORY_README.md  GAGAN_DECISIONS_2026-05-21.md  GAUNTLET.md  HANDOFF.md  JUDGE_LOG_2026-05-21.md  LICENSE  MINI_AGI_COMPANY_MODEL.md  NOTICE  PENTAGON_MODEL_AUDIT_2026-05-22.md  PENTAGON_ORG_CHART.md  README.md  cli_flag_drift_allowlist.toml  collaboration-topology.md  dark-factory-design.md  docstring_gaps.toml  mkdocs.yml  pyproject.toml  v1.1-plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: deploy-verification.yml  docs.yml  docstrings.yml  publish.yml  pullfrog.yml  types.yml  wheel-completeness.yml
activegraph/: __init__.py  __main__.py  errors.py  frame.py  policy.py  t6_hard_fixture_module.py
activegraph/behaviors/: __init__.py  base.py  decorators.py
activegraph/cli/: __init__.py  events_tail.py  main.py  quickstart.py
activegraph/core/: __init__.py  clock.py  event.py  graph.py  ids.py  overrides.py  patch.py  view.py
activegraph/llm/: __init__.py  _mcp_tool_server.py  anthropic.py  cache.py  claude_code_cli.py  errors.py  openai.py  parsing.py  prompt.py  provider.py  recorded.py  types.py
activegraph/observability/: __init__.py  logging.py  metrics.py  migration.py  otel.py  prometheus.py  status.py
activegraph/packs/: __init__.py  loader.py  scaffold.py
activegraph/runtime/: __init__.py  _live.py  behavior_graph.py  budget.py  config_errors.py  diff.py  errors.py  exec_errors.py  patterns.py  queue.py  registration_errors.py  registry.py  runtime.py  scheduler.py  view_builder.py
activegraph/store/: __init__.py  base.py  conformance.py  errors.py  memory.py  postgres.py  serde.py  sqlite.py  url.py
activegraph/tests/: test_attach_store_fresh_reattach_regression.py  (+65 more)
activegraph/tools/: base.py  (+8 more)
agent-os/: AGENT_IDENTITY_MAP.md  CORE_PURPOSE_DOCS.md  INTERPRETER_CONTRACT.md  RELIABILITY_OPERATING_CONTRACT.md  agent-cohort.json  puter-agent-map.json
docs/: CNAME  index.md  operating.md  pack_authoring.md  quickstart.md
examples/: babyagi.py  dark_factory_claude_code_provider_demo.py  dark_factory_failure_event_demo.py  diligence_real_run.py  diligence_with_tools.py  llm_claim_extraction.py  operate_a_run.py  quickstart.py  quickstart_session.txt  resume_and_fork.py  v0_promote_runtime_diff.py
frames/: autonomy-completion-audit-2026-05-22.md  brandon-d-frozen-evidence-audit-2026-05-27.md  classifier-extension-proposal-20260526.md  dirty-edits-audit-20260526.md  evidence-index-2026-05-22.md  factory-events.jsonl  flywheel-bottleneck-gate-map.md  flywheel-readiness.status  gauntlet-completion-audit-2026-05-22.md  pentagon-agent-activation-packet-2026-05-22.md  pentagon-docs-activation-audit-2026-05-23.md  pentagon-reliability-repair.status  pipeline-smoke-test-20260525.txt  post-baseline-flywheel-roadmap-2026-05-23.md  remaining-todos-v0-design-2026-05-27.md  sasha-actions.jsonl  skills-installation-2026-05-22.md  t13-and-beyond-factory-survivability-2026-05-23.md  t1a-close-ring0-docstring-exemptions.yaml  t2-build-cli-flag-drift-gate.yaml  t3-implement-cli-set-flag.status  t3-implement-cli-set-flag.yaml  t4-openai-tool-shape-translation.status  t4-openai-tool-shape-translation.yaml  t5-pentagon-handoff-activation-smoke.status  t5-pentagon-handoff-activation-smoke.yaml  t5b-pentagon-handoff-activation-smoke.status  t5b-pentagon-handoff-activation-smoke.yaml  t5c-recipient-self-watchdog-smoke.status  t5c-recipient-self-watchdog-smoke.yaml  t5d-file-gauntlet-easy-20260522T230015Z.proof  t5d-file-gauntlet-extra-hard-20260522T230015Z.proof  t5d-file-gauntlet-hard-20260522T230015Z.proof  t5d-file-gauntlet-medium-20260522T230015Z.proof  t5d-target-agent-turn-activation-primitive.status  t5d-target-agent-turn-activation-primitive.yaml  t5h-repo-isolation-audit-2026-05-23.md  t5j-current-bridge-easy-20260523T1330Z.proof  t5r-native-easy-instruction-20260523.txt  t5r-native-extra-hard-instruction-20260523.txt  (+175 more)
launchagents/: run.pentagon.trigger-bridge.plist
scripts/: audit-pentagon-native-poller-surface.mjs  audit-pentagon-trigger-attribution.mjs  audit_docstrings.py  audit_types.py  blake-budget-marshal.mjs  bridge_dispatch.py  check-satisfaction-of-search.mjs  check-unread-source-contradictions.mjs  f1-daemon.mjs  factory-arbitrage-meter.mjs  factory-crash-guard.mjs  factory-events-list.mjs  factory-events.mjs  factory_events.py  gate_cli_flag_drift.py  gate_docstrings.py  honker_listen.py  migrate-agent-cohort.mjs  pentagon-trigger-bridge.mjs  probe-all-recent-triggers.mjs  probe-canary-trigger.mjs  probe-native-app-poller.mjs  probe-native-poller.mjs  provision-puter-agents.mjs  read-active-graph-agents.mjs  research-packet.mjs  run-native-pentagon-task.mjs  runner-classify-infra-failure.test.mjs  sasha-skeptic.mjs  slack-adapter.mjs  t7-medium-cohortB-fire.mjs  t7-repetition-classifier.mjs  t7-repetition-harness.mjs  verify-pentagon-autonomy-from-logs.mjs
tests/: _llm_helpers.py  conftest.py  test_activate_after.py  test_budget_consume_t7m_001_coverage.py  test_budget_start_t7m_015_coverage.py  test_causal_cross_tool.py  test_cli.py  test_cli_events_tail.py  test_cli_flag_drift.py  test_cli_fork_set.py  test_clock.py  test_delayed_queue_push_t7m_013_coverage.py  test_diff.py  test_diligence_pack.py  test_diligence_with_tools.py  test_doc_links.py  test_doc_site_reachable.py  test_errors_format.py  test_errors_is_structured_t7m_017_coverage.py  test_event.py  test_event_to_dict_t7m_010_coverage.py  test_fork.py  test_fork_set_persistence.py  test_fork_set_replay.py  test_frozenclock_t7m_004_coverage.py  test_graph.py  test_ids.py  test_license.py  test_llm_anthropic.py  test_llm_behavior.py  test_llm_budget.py  test_llm_causal.py  test_llm_claim_extraction.py  test_llm_default_model.py  test_llm_determinism.py  test_llm_failure.py  test_llm_openai.py  test_llm_prompt.py  test_llm_provider_fixtures.py  test_llm_replay.py  (+63 more)
(+199 files in other folders)
