[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activegraph"
version = "1.0.1"
description = "An event-sourced reactive graph runtime for long-running, auditable, agentic systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Active Graph contributors" }]
keywords = ["graph", "agents", "event-sourcing", "runtime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
# Pydantic is required for the pack format (object type schemas and
# settings models). It was optional in v0.8 (LLM-only); v0.9 pulls it
# into the hard deps so packs Just Work.
dependencies = ["click>=8,<9", "pydantic>=2"]

[project.optional-dependencies]
# v1.0.1 #5: the [llm] extra carries every shipped provider's SDK so a
# single install line lights up both AnthropicProvider and OpenAIProvider.
# The per-provider aliases ([anthropic], [openai]) install one at a time
# for cost-conscious deployments. tiktoken under [openai] keeps
# count_tokens accurate; the heuristic fallback is documented but loud.
llm = ["anthropic>=0.40", "openai>=1.0", "tiktoken>=0.7", "pydantic>=2"]
anthropic = ["anthropic>=0.40", "pydantic>=2"]
openai = ["openai>=1.0", "tiktoken>=0.7", "pydantic>=2"]
sqlite = []     # SQLite is stdlib — no extra deps needed for the v0.5 store
postgres = ["psycopg[binary]>=3.1,<4"]
prometheus = ["prometheus_client>=0.20"]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "tiktoken>=0.7",
    "pydantic>=2",
    "psycopg[binary]>=3.1,<4",
    "prometheus_client>=0.20",
]
dev = [
    "pytest>=7",
    "pydantic>=2",
    "prometheus_client>=0.20",
    "psycopg[binary]>=3.1,<4",
]
# Doc-site build deps. The docs workflow installs from this extra so
# the install line and the mkdocs config can't drift the way they did
# pre-rc3-amendment: mkdocs.yml declared the `mkdocstrings` plugin
# from the doc-site phase onward but `.github/workflows/docs.yml`'s
# hardcoded install line never pulled it in, so every docs build
# silently failed with "plugin not installed." The v1.1 #9 deploy-
# verification gate caught it on its first run post-merge to main.
# Adding a new mkdocs plugin or theme dep? Add it here; the workflow
# auto-syncs because it installs `.[docs]`. `mkdocs-material` brings
# in `pymdown-extensions` transitively, covering every `pymdownx.*`
# markdown extension in `mkdocs.yml`.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
activegraph = "activegraph.cli.main:main"

# v0.9: register the shipped Diligence pack under the
# `activegraph.packs` entry point group. Third-party packs follow the
# same pattern. See CONTRACT v0.9 #11 and docs/pack_authoring.md.
[project.entry-points."activegraph.packs"]
diligence = "activegraph.packs.diligence:pack"

[project.urls]
Homepage = "https://github.com/yoheinakajima/activegraph"

[tool.setuptools.packages.find]
include = ["activegraph*"]
exclude = ["tests*", "examples*"]

# Runtime data files shipped with the wheel. CONTRACT v1.1 #8 (the
# wheel-completeness gate) is the enforcement layer that catches
# any future addition here that's declared in the source tree but
# not in this block. The `prompts/` directory is not a Python
# package (no `__init__.py`), so `packages.find` does not see it;
# the explicit glob below is what gets the `.md` prompt files into
# the wheel.
#
# Adding a new pack with non-`.py` data files? Add a key for the
# pack's parent package and the glob(s) for its data files. The
# CI gate (.github/workflows/wheel-completeness.yml) runs the
# quickstart against the installed wheel; if the data is missing,
# the gate fails before the wheel can ship.

[tool.setuptools.package-data]
"activegraph.packs.diligence" = ["prompts/*.md"]

[tool.pytest.ini_options]
markers = [
    "postgres: tests that require a running Postgres (skipped unless ACTIVEGRAPH_TEST_POSTGRES_URL is set)",
    "slow: long-running tests opt-in by name in CI (e.g. wheel-completeness gate; builds + installs into a fresh venv)",
]

# ---------------------------------------------------------------------------
# mypy configuration. CONTRACT v1.0 #C5 — allowlist-driven strict mode.
#
# The gate checks ONLY the public-surface modules that pass --strict
# today. Internal modules and dirty allowlist modules (one or more
# --strict findings) are not gated — the gate's purpose is to prevent
# regression on the surface that's already clean, not to retroactively
# type-check the whole codebase.
#
# Re-generate the audit with `python scripts/audit_types.py`. When a
# dirty module is fixed (per docs/reference/api/TYPE_REPORT.md), add
# it to both `files` and the per-module override below. The gate then
# enforces the new module's strict-mode invariants going forward.
#
# Current baseline (v1.0-rc1 #3/5): 22/38 allowlist modules pass
# (57.9%). The 16 dirty modules are tracked in TYPE_REPORT.md and the
# v1.1 type-completeness follow-on closes them in one PR series.

[tool.mypy]
python_version = "3.11"
# The gate's scope: every clean module is checked; nothing else.
# Mypy treats imported modules as `Any` (`follow_imports = "skip"`)
# rather than checking them — the gate's purpose is preventing
# regression on the allowlist, not retroactively typing internals.
# This means strict-mode checks pass even when a clean module
# imports from a dirty one; the v1.1 follow-on closes the dirty
# modules and they become Any-free imports.
follow_imports = "skip"
# Optional-dep imports (anthropic, psycopg, prometheus_client) don't
# ship type stubs; treat them as untyped at the boundary. Strict-mode
# modules still forbid `Any` returns from these via `warn_return_any`;
# per-call casts or `# type: ignore[no-any-return]` with a reason are
# the fix at the call site.
ignore_missing_imports = true
# The clean module files. Mypy with no positional argument checks
# these and only these. CI just runs `mypy` and the config does the
# rest.
files = [
    "activegraph/core/clock.py",
    "activegraph/core/event.py",
    "activegraph/core/ids.py",
    "activegraph/core/patch.py",
    "activegraph/core/view.py",
    "activegraph/errors.py",
    "activegraph/frame.py",
    "activegraph/llm/errors.py",
    "activegraph/observability/metrics.py",
    "activegraph/policy.py",
    "activegraph/runtime/budget.py",
    "activegraph/runtime/config_errors.py",
    "activegraph/runtime/errors.py",
    "activegraph/runtime/exec_errors.py",
    "activegraph/runtime/registration_errors.py",
    "activegraph/runtime/scheduler.py",
    "activegraph/store/errors.py",
    "activegraph/store/memory.py",
    "activegraph/store/url.py",
    "activegraph/tools/base.py",
    "activegraph/tools/context.py",
    "activegraph/tools/errors.py",
]

# Strict-mode invariants applied to each clean module. Same list as
# `files` above (mypy expects module dotted names here, not paths).

[[tool.mypy.overrides]]
module = [
    "activegraph.core.clock",
    "activegraph.core.event",
    "activegraph.core.ids",
    "activegraph.core.patch",
    "activegraph.core.view",
    "activegraph.errors",
    "activegraph.frame",
    "activegraph.llm.errors",
    "activegraph.observability.metrics",
    "activegraph.policy",
    "activegraph.runtime.budget",
    "activegraph.runtime.config_errors",
    "activegraph.runtime.errors",
    "activegraph.runtime.exec_errors",
    "activegraph.runtime.registration_errors",
    "activegraph.runtime.scheduler",
    "activegraph.store.errors",
    "activegraph.store.memory",
    "activegraph.store.url",
    "activegraph.tools.base",
    "activegraph.tools.context",
    "activegraph.tools.errors",
]
strict = true
